CrOS shelf: do not highlight shelf items on hover

When we show a bubble anchored to a certain view, it's usually the case
that we also want to highlight that view to show what the bubble is
attached to. However, in the case of shelf items, we show a bubble on
hover, and highlighting the shelf item gives the impression that a
tap/click event has occurred (see linked bug).

This CL adds a flag to the bubble class to allow callers to disable
the highlighting behavior.

Bug: 888570
Change-Id: Id90bcf710cdc33263fcdd8d932a35b964d48fc9c
Reviewed-on: https://chromium-review.googlesource.com/c/1382670
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618153}
Former-commit-id: c8cf9fc401ba4db762c7914f7e3874952ba73993